--- a/second_day/views/about.html
+++ b/second_day/views/about.html
@@ -10,6 +10,10 @@
 <body>
     <h1>about</h1>
     <h2>Your path to becoming a node.js </h2>
+    <nav>
+        <a href="/">Home Page</a>
+        <a href="/about">About Page</a>
+    </nav>
 </body>
 
 </html>
